# content-agents

./: .dockerignore  .env_example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  THIRD_PARTY_NOTICE.md  agent-readiness.yaml  format.bat  format.sh  llms-full.txt  llms.txt  pyproject.toml
apps/material_agent_service/: .env_example  Dockerfile  README.md  __init__.py  docker-compose.cluster-embedding.yml  docker-compose.multi-gpu.yml  docker-compose.yml  openapi.yaml  pyproject.toml
apps/material_agent_service/client/: README.md  client.py
apps/material_agent_service/docs/: api.md  brev.md  docker.md
apps/material_agent_service/examples/: README.md  event_log_response.json  regenerate_client_usage.py  regenerate_request.json
apps/material_agent_service/examples/custom_materials/: materials.yaml  materials_libs.usda
apps/material_agent_service/examples/large_scene/: README.md  warehouse.usda
apps/material_agent_service/materials/default/: materials.yaml
apps/material_agent_service/service/: README.md  __init__.py  config.py  json_utils.py  main.py  utils.py
apps/material_agent_service/service/events/: __init__.py  listener.py  telemetry_listener.py
apps/material_agent_service/service/models/: __init__.py  requests.py  responses.py
apps/material_agent_service/service/routers/: __init__.py  artifacts_router.py  assets_router.py  materials_router.py  pipeline_router.py  sessions_router.py
apps/material_agent_service/service/runtime/: __init__.py  bus.py  events.py  registry.py
apps/material_agent_service/service/session/: manager.py  storage.py
apps/material_agent_service/service/storage/: base.py  config.py  local_store.py  s3_store.py
apps/material_agent_service/service/workers/: executor.py
apps/material_agent_service/tests/: __init__.py  conftest.py  test_integration.py  test_multi_instance.py
apps/material_agent_service/tests/api/: __init__.py  test_custom_materials.py  test_materials_catalog.py  test_materials_path_traversal.py  test_pipeline_cancel.py  test_pipeline_optimize_validation.py  test_pipeline_real_executor_smoke.py  test_pipeline_regenerate.py  test_pipeline_smoke.py  test_sessions_admin.py  test_usd_variations.py
apps/material_agent_service/tests/client/: test_api_client.py
apps/material_agent_service/tests/e2e/: __init__.py  test_concurrency_scale.py
apps/material_agent_service/tests/runtime/: test_runtime_registry.py
apps/material_agent_service/tests/unit/: __init__.py  test_config.py  test_event_bus.py  test_event_bus_scene_progress.py  test_openapi_static.py  test_pipeline_model_routing.py  test_pipeline_render_limits.py  test_results_wait_for_stats.py  test_session_manager.py  test_session_manager_update_lock.py  test_storage.py
apps/ovrtx_rendering_api/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  openapi.yaml  pyproject.toml
apps/ovrtx_rendering_api/client/: client.py
apps/ovrtx_rendering_api/docs/: api.md
apps/ovrtx_rendering_api/scripts/: smoke_non_root_container.sh
apps/ovrtx_rendering_api/service/: dispatcher.py  main.py  models.py  renderer.py
apps/ovrtx_rendering_api/tests/: test_docker_entrypoint.py  test_service_models.py  test_service_renderer.py  test_service_renderer_num_sensor_updates.py
apps/physics_agent/: README.md  pyproject.toml
apps/physics_agent/configs/: lightbulb.yaml  tire_bounce.yaml
apps/physics_agent/docs/: api.md  tuning.md
apps/physics_agent/physics_agent/: __init__.py  cli.py  utils.py
apps/physics_agent/tests/: test_api_defaults_render_backend.py  test_api_refine.py  test_apply_physics_autowire.py  test_apply_physics_e2e.py  test_apply_physics_output_path_doc.py  test_cli_predict.py  test_config_unified_pipeline.py  test_drop_settle_metrics.py  test_iterative_physics_refinement.py  test_mass_scale_quality.py  test_prediction_schema.py  test_recording_recorder.py  test_scenario_refine.py  test_tasks_config_helpers.py  test_tasks_interpret_user_prompt_tuning.py  test_tasks_judge_tune.py  test_tasks_no_optimizer_imports.py  test_tasks_prepare_and_reporting.py  test_tasks_runtime_pipeline.py  test_tuning_backend.py  test_tuning_cli.py  test_tuning_newton_backend.py  test_tuning_newton_simulator.py  test_tuning_newton_simulator_unit.py  test_tuning_optimizers.py  test_tuning_ovphysx_backend.py  test_tuning_runner.py  test_tuning_runner_user_prompt.py  test_tuning_scenario.py  test_tuning_scenario_resolution.py  test_tuning_scenarios_dispatch.py  test_tuning_scenarios_freeform_score.py  test_tuning_scenarios_record_video.py  test_tuning_scenarios_scene_builder.py  test_tuning_usd_patch.py  test_tuning_visual_evidence.py  test_world_understanding_physics_trajectory.py
apps/physics_agent_service/: .dockerignore  Dockerfile  README.md  __init__.py  conftest.py  docker-compose.multi-gpu.yml  docker-compose.yml  openapi.yaml  pyproject.toml  test_live.sh
apps/physics_agent_service/client/: README.md  client.py  client_v2.py
apps/physics_agent_service/docs/: api.md  brev.md
apps/physics_agent_service/service/: README.md  __init__.py  config.py  main.py  utils.py
apps/physics_agent_service/tests/: __init__.py  conftest.py  test_integration.py  test_multi_instance.py
apps/texture_agent_service/: Dockerfile  README.md  __init__.py  docker-compose.brev-host-llm.yml  docker-compose.multi-gpu.yml  docker-compose.yml  openapi.yaml  pyproject.toml
apps/texture_agent_service/client/: client.py
apps/texture_agent_service/docs/: api.md  brev.md
apps/texture_agent_service/service/: config.py  main.py  sanitization.py  utils.py
apps/validation_agent/: README.md  pyproject.toml
apps/validation_agent/examples/: README.md
apps/validation_agent/tests/: test_validation_agent_cli_run.py  test_validation_agent_utils.py
apps/validation_agent/validation_agent/: __init__.py  cli.py  utils.py
tools/agent-readiness-ci/: pyproject.toml
tools/agent-readiness-ci/agent_readiness/: __init__.py  api_design.py  artifacts.py  cli.py  config.py  headless.py  optional_lanes.py  publish.py  static_scan.py  summary.py
(+865 files in other folders)
