[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ovrtx-rendering-api"
version = "0.1.0"
description = "OVRTX-based USD rendering API service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "requests>=2.31",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["service*"]
