[project]
name = "physics-agent"
dynamic = ["version"]
description = "Physics property classification agent for 3D assets built on world-understanding framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Omniverse GenAI Team"},
]

[build-system]
requires = ["hatchling<1.27.0", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
fallback-version = "0.3.10"
from-file = { source = "../../VERSION.md" }

[tool.hatch.version]
source = "uv-dynamic-versioning"

dependencies = [
    # Core dependency - the world-understanding package from parent directory
    "world-understanding>=0.2.0",
    "setuptools>=80.9.0",

]

[project.optional-dependencies]
dev = [
    "world-understanding[dev]>=0.2.0",
]
all = [
    "physics-agent[dev]",
]

[project.scripts]
physics-agent = "physics_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["physics_agent"]

[tool.ruff]
# Match world-understanding's ruff configuration
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811"]

[tool.mypy]
# Match world-understanding's mypy configuration
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=physics_agent",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["physics_agent"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
    "@abstractmethod",
]
