[project]
name = "validation-agent"
dynamic = ["version"]
description = "Runtime validation agent for generated 3D content built on world-understanding"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Omniverse GenAI Team"},
]
dependencies = [
    "python-dotenv==1.2.2",
    "rich>=14.0,<15.0.0",
    "typer==0.16.1",
    "world-understanding>=0.3.17",
]

[build-system]
requires = ["hatchling<1.27.0", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
fallback-version = "0.4.2"
from-file = { source = "../../VERSION.md" }

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.optional-dependencies]
dev = [
    "world-understanding[dev]>=0.3.17",
]
all = [
    "validation-agent[dev]",
]

[project.scripts]
validation-agent = "validation_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["validation_agent"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F811"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--verbose",
    "--cov=validation_agent",
    "--cov-report=term-missing",
]
